# Launch_Manager

./: Cargo.toml  Currently_loaded.txt
macropad_profiles/aaa/: Profile.txt
macropad_profiles/macro/: Profile.txt
macropad_profiles/new1/: Profile.txt
macropad_profiles/profile2/: Profile.txt
src/: main.rs  taskbar.rs
src/Devices/: Macropad.rs  popup.rs
src/maths/: Draw_text.rs  button.rs
src/textures/: Draw_func.rs  macropad.rs
