[package]
name = "Launch_Manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.84.0"
piston_window = "0.131.0"
serialport = "4.5.0"
image = "0.24.3" # or the latest version
self_update = "0.41.0"
